@@ -23,6 +23,6 @@
 # MinGW Project, accept liability for any damages, however caused,
 # arising from the use of this software.
 #
-  75fc52dde8d408d798c0be51070d5d02f4c63085 2013091501 package-list.xml
+  75fc52dde8d408d798c0be51070d5d02f4c63085 2013091502 package-list.xml
 #
 # $RCSfile$: end of file
