@@ -1,0 +1,80 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<software-distribution project="MinGW" home="http://mingw.org" issue="@YYYYMMDDNN@">
+
+  <!-- File: mingw32-tcltk.xml -->
+
+  <package-collection subsystem="mingw32">
+    <download-host uri="http://prdownloads.sourceforge.net/mingw/%F?download" />
+
+    <package name="mingw32-tcl">
+      <affiliate group="MinGW Contributed Applications" />
+      <description lang="en" title="TCL - Tool Command Language">
+        <paragraph>Tcl (Tool Command Language) is a very powerful but easy to
+	learn dynamic programming language, suitable for a very wide range of
+	uses, including web and desktop applications, networking,
+	administration, testing and many more. Open source and business-
+	friendly, Tcl is a mature yet evolving language that is truly cross
+	platform, easily deployed and highly extensible.
+	</paragraph>
+      </description>
+      <license tarname="tcl-%-mingw32-%-lic.tar.lzma"/>
+      <source tarname="tcl-%-mingw32-%-src.tar.lzma" />
+      <component class="bin">
+	<release tarname="tcl-8.6.0-1-mingw32-bin.tar.lzma" >
+	  <requires eq="mingw32-tcl-%-mingw32-dev.tar.lzma" />
+	</release>
+      </component>
+      <component class="dev">
+	<release tarname="tcl-8.6.0-1-mingw32-dev.tar.lzma" >
+	  <requires eq="mingw32-tcl-%-mingw32-dll.tar.lzma" />
+	</release>
+      </component>
+      <component class="dll">
+	<release tarname="tcl-8.6.0-1-mingw32-dll.tar.lzma" />
+      </component>
+      <component class="doc">
+	<release tarname="tcl-8.6.0-1-mingw32-doc.tar.lzma" />
+      </component>
+      <component class="lic">
+	<release tarname="tcl-8.6.0-1-mingw32-lic.tar.lzma" />
+      </component>
+      <component class="man">
+	<release tarname="tcl-8.6.0-1-mingw32-man.tar.lzma" />
+      </component>
+    </package>
+    <package name="mingw32-tk">
+      <affiliate group="MinGW Contributed Applications" />
+      <description lang="en" title="TK - TCL Graphical User Interface Toolkit">
+	<paragraph>Tk is a graphical user interface toolkit that takes
+	developing desktop applications to a higher level than conventional
+	approaches. Tk is the standard GUI not only for Tcl, but for many other
+	dynamic languages, and can produce rich, native applications that run
+	unchanged across Windows, Mac OS X, Linux and more.
+	</paragraph>
+      </description>
+      <license tarname="tk-%-mingw32-%-lic.tar.lzma"/>
+      <source tarname="tk-%-mingw32-%-src.tar.lzma" />
+      <component class="bin">
+	<release tarname="tk-8.6.0-1-mingw32-bin.tar.lzma" >
+	  <requires eq="mingw32-tk-%-mingw32-dev.tar.lzma"/>
+	  <requires eq="mingw32-tcl-%-mingw32-bin.tar.lzma"/>
+	</release>
+      </component>
+      <component class="dev">
+	<release tarname="tk-8.6.0-1-mingw32-dev.tar.lzma" >
+	  <requires eq="mingw32-tk-%-mingw32-dll.tar.lzma"/>
+	</release>
+      </component>
+      <component class="dll">
+	<release tarname="tk-8.6.0-1-mingw32-dll.tar.lzma" />
+      </component>
+      <component class="doc">
+	<release tarname="tk-8.6.0-1-mingw32-doc.tar.lzma" />
+      </component>
+      <component class="lic">
+	<release tarname="tk-8.6.0-1-mingw32-lic.tar.lzma" />
+      </component>
+    </package>
+  </package-collection>
+</software-distribution>
+<!-- vim: set nocompatible expandtab fileformat=unix textwidth=80 tabstop=2 shiftwidth=2: -->
